--- a/react/fastchargeapi/src/App.css
+++ b/react/fastchargeapi/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+.terminal {
+  overflow: hidden;
+}
+.terminal .react-terminal-wrapper {
+  font-size: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.terminal .react-terminal-wrapper {
+  font-size: 0.95rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.terminal .react-terminal-line {
+  opacity: 0.4;
+}
+.terminal .react-terminal-line.react-terminal-input {
+  opacity: 1;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+html {
+  background-color: #FFC100;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
