[React] Add Consumed Free Quota to log table

--- a/react/fastchargeapi/src/App.scss
+++ b/react/fastchargeapi/src/App.scss
@@ -54,3 +54,7 @@ code.hljs {
     background-color: $white;
     border-radius: 0.25em;
 }
+
+.MuiAutocomplete-option[aria-selected="true"] {
+    background-color: unset !important;
+}
