--- a/react/docs/src/css/custom.scss
+++ b/react/docs/src/css/custom.scss
@@ -3,89 +3,138 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
+$blue: #3772ff;
+$blue-dark: rgb(38, 79, 178);
+$blue-light: rgb(235, 240, 255);
+$white: #e8e9eb;
+$yellow: #ffc100;
+$black: #313638;
+$black-light: lighten($black, 10%);
+$red: #df2935;
 
 /* You can override the default Infima variables here. */
 :root {
-    --yellow: #ffc100;
-    --blue: #3772ff;
-    --white: #e8e9eb;
-    --black: #313638;
-    --ifm-color-primary: var(--yellow);
-    --ifm-color-primary-dark: #e6ae00;
-    --ifm-color-primary-darker: #d9a400;
-    --ifm-color-primary-darkest: #b38700;
-    --ifm-color-primary-light: #ffc71a;
-    --ifm-color-primary-lighter: #ffca26;
-    --ifm-color-primary-lightest: #ffd44d;
-    --ifm-code-font-size: 95%;
-    --ifm-heading-color: var(--black);
-    --ifm-font-color-base: var(--black);
-    --ifm-font-color-base-inverse: var(--black);
-    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-    --ifm-font-family-base: "Ubuntu", sans-serif;
-    --ifm-heading-font-family: "Ubuntu", sans-serif;
+    --ifm-color-primary: #{$blue};
+    --ifm-color-primary-dark: #{$blue-dark};
+    --ifm-color-primary-darker: #{$blue-dark};
+    --ifm-color-primary-darkest: #{$blue-dark};
+    --ifm-color-primary-light: #{$blue-light};
+    --ifm-color-primary-lighter: #{$blue-light};
+    --ifm-color-primary-lightest: #{$blue-light};
+    --ifm-hero-background-color: var(--ifm-color-primary-lightest);
+    --ifm-font-family-base: "Roboto", sans-serif;
+    --ifm-global-radius: 1em;
+    --ifm-button-font-weight: 500;
+    .button {
+        --ifm-button-size-multiplier: 1.2;
+        line-height: 1.75;
+        letter-spacing: 0.02857em;
+        font-family: "Roboto", sans-serif;
+    }
+}
 
-    --ifm-link-color: var(--blue);
-    --ifm-link-hover-color: var(--ifm-color-primary-darker);
-    --ifm-navbar-link-hover-color: var(--ifm-color-primary-darker);
-    --ifm-menu-color-active: var(--ifm-color-primary-darkest);
-    --ifm-breadcrumb-color-active: var(--ifm-color-primary-darkest);
-    --ifm-footer-background-color: var(--black);
+[data-theme="light"] {
+    .hero--primary {
+        --ifm-hero-text-color: #{$black};
+        --ifm-hero-background-color: var(--ifm-color-primary-lightest);
+    }
+    .button.button--secondary {
+        color: #{$white};
+        background-color: #{$black};
+        &:hover {
+            background-color: #{$black-light};
+        }
+    }
+    .footer {
+        --ifm-footer-background-color: #{$black};
+    }
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-    --ifm-color-primary: var(--yellow);
-    --ifm-color-primary-dark: #e6ae00;
-    --ifm-color-primary-darker: #d9a400;
-    --ifm-color-primary-darkest: #b38700;
-    --ifm-color-primary-light: #ffc71a;
-    --ifm-color-primary-lighter: #ffca26;
-    --ifm-color-primary-lightest: #ffd44d;
-    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-
-    --ifm-heading-color: var(--white);
-    --ifm-font-color-base: var(--white);
-    --ifm-font-color-base-inverse: var(--white);
-}
-
-html[data-theme="dark"] {
-    --ifm-background-color: #222;
-    --ifm-background-surface-color: #121212;
-}
-
-@font-face {
-    font-family: "Ubuntu";
-    src: url("/font/Ubuntu/Ubuntu-Regular.ttf");
-}
-
-.table-of-contents__link:hover {
-    color: var(--ifm-color-primary-darker);
-}
-.table-of-contents__link--active {
-    color: var(--ifm-menu-color-active);
-}
-
-.hero--primary {
-    background-color: var(--yellow);
-    * {
-        color: var(--black);
-    }
-    .button {
-        font-weight: 300;
+    --ifm-color-primary: #c5d6ff;
+    --ifm-color-primary-dark: #98b6ff;
+    --ifm-color-primary-darker: #81a6ff;
+    --ifm-color-primary-darkest: #3d76ff;
+    --ifm-color-primary-light: #f2f6ff;
+    --ifm-color-primary-lighter: #ffffff;
+    --ifm-color-primary-lightest: #ffffff;
+    .hero--primary {
+        --ifm-hero-text-color: #{$white};
+        --ifm-hero-background-color: rgb(38, 79, 178);
     }
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
+// html[data-theme="dark"] {
+// --ifm-background-color: #222;
+// --ifm-background-surface-color: #121212;
+// }
+
+// .table-of-contents__link:hover {
+//     color: var(--ifm-color-primary-darker);
+// }
+// .table-of-contents__link--active {
+//     color: var(--ifm-menu-color-active);
+// }
+
+// .hero--primary {
+//     background-color: var(--ifm-color-primary-lightest);
+//     * {
+//         color: var(--black);
+//     }
+//     .button {
+//         font-weight: 300;
+//     }
+// }
+
+h1 {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    font-size: 3.125rem;
+}
+
+h2 {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-size: 1.875rem;
+}
+
+h3 {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 600;
+    font-size: 1.25rem;
+}
+
+h4 {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 800;
+    font-size: 1.125rem;
+}
+
+h5 {
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 800;
+    font-size: 1rem;
+}
+
 h6 {
-    a {
-        color: var(--ifm-heading-color);
-        &:hover {
-            color: var(--ifm-color-primary-darker);
-        }
-    }
+    font-family: "Roboto", sans-serif;
+    font-weight: 800;
+    font-size: 0.9375rem;
+}
+
+p {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+}
+
+.table-of-contents {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 0.9rem;
+}
+
+.menu {
+    font-weight: 400;
 }
